--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.UkGLGA8Y.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D0Vz6Q8q.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.oA2MTBbM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.yLez6DiW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.NeA4imHy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.i0PmdPPf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.To9u61Eq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.XatKojLs.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.PaU4Uc1O.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2._I9birMU.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1sex8hh = {
+					__sveltekit_1fu8vjo = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.UkGLGA8Y.js"),
-						import("./_app/immutable/entry/app.NeA4imHy.js")
+						import("./_app/immutable/entry/start.D0Vz6Q8q.js"),
+						import("./_app/immutable/entry/app.To9u61Eq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
