--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.w_-bwSy9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.AFJqTfpF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.oA2MTBbM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.BXRK6J3B.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cqe5npq1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.pfUZVkqk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.vF3UIPYM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.XatKojLs.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.PaU4Uc1O.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.jbgsIp_W.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_7pjxax = {
+					__sveltekit_1uilpdn = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.w_-bwSy9.js"),
-						import("./_app/immutable/entry/app.cqe5npq1.js")
+						import("./_app/immutable/entry/start.AFJqTfpF.js"),
+						import("./_app/immutable/entry/app.vF3UIPYM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
