--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.xe8Oov4Q.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.kaq9OAm6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.oA2MTBbM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.hbP_TvrJ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.YNIW7DGn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.HG9bQyN6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DjQmGql5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.XatKojLs.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.PaU4Uc1O.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.jbgsIp_W.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_e1vcyl = {
+					__sveltekit_1qph9p4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.xe8Oov4Q.js"),
-						import("./_app/immutable/entry/app.YNIW7DGn.js")
+						import("./_app/immutable/entry/start.kaq9OAm6.js"),
+						import("./_app/immutable/entry/app.DjQmGql5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
