--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.T19T6f9e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.oN7ufSUx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.SuJUgh1i.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.0Q1ca_HO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.cBCQ_Z-M.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2-u11mkK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Ceef9DLd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.geDiylAy.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.B-TSII0J.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.i2ku0LZq.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1kx77ob = {
+					__sveltekit_1rrbb30 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.T19T6f9e.js"),
-						import("./_app/immutable/entry/app.2-u11mkK.js")
+						import("./_app/immutable/entry/start.SuJUgh1i.js"),
+						import("./_app/immutable/entry/app.Ceef9DLd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
