--- a/completions.html
+++ b/completions.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.UiXoLPRZ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.oXS6Av0L.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.7El0iF19.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.uAw1t3Md.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.zPGdrhwW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0ee4Lft3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.qhjG9tJV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.dBNevQPC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.__LLNnnl.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.VDUHgb_1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.y6_ZNIx3.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.E4MsriIH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_cda87q = {
+					__sveltekit_18wutcv = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.oXS6Av0L.js"),
-						import("./_app/immutable/entry/app.0ee4Lft3.js")
+						import("./_app/immutable/entry/start.uAw1t3Md.js"),
+						import("./_app/immutable/entry/app.qhjG9tJV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
