--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.mYvD1gVy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.nWjeMWYV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ddTh2wFD.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ag7eGtm-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.URy2MTOT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.v9TWereq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5De0BRuJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BY5MnygW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.6gEPtuaq.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.vG-naVoj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.MbT5gMCr.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.hsVzt6eF.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_1n4osra = {
+					__sveltekit_83m3rl = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.nWjeMWYV.js"),
-						import("./_app/immutable/entry/app.v9TWereq.js")
+						import("./_app/immutable/entry/start.ag7eGtm-.js"),
+						import("./_app/immutable/entry/app.5De0BRuJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
