--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.mYvD1gVy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ksiz1MvT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.PyBtAN7N.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5DOxJJmm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.bagSdXDf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.NF1v7u9n.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.YCIiKOVs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.KTIeQlDg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.GPiG06nx.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.RC-w-eiw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.yOCmd_H8.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.hsVzt6eF.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_vmhzqt = {
+					__sveltekit_1ezx8cw = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ksiz1MvT.js"),
-						import("./_app/immutable/entry/app.NF1v7u9n.js")
+						import("./_app/immutable/entry/start.5DOxJJmm.js"),
+						import("./_app/immutable/entry/app.YCIiKOVs.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
