--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.mYvD1gVy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.gSgPOLiA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry._H5TQZoh.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.EOTdDfBr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.T2GzUn5B.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8kv6iXrS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.igD_tB37.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.XgQ0ohiE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.LwX_Iu4Q.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.NmqlCm6L.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.MHXR5KL8.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.hsVzt6eF.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_hs5twf = {
+					__sveltekit_1wmjhgd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.gSgPOLiA.js"),
-						import("./_app/immutable/entry/app.8kv6iXrS.js")
+						import("./_app/immutable/entry/start.EOTdDfBr.js"),
+						import("./_app/immutable/entry/app.igD_tB37.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
