--- a/completions.html
+++ b/completions.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.J5r0XgYs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.UiXoLPRZ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.EOTdDfBr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.T2GzUn5B.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9w81IbX7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.EHlwC-Fx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.KqCp1VWV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.igD_tB37.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.sel3mSnU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Z3YDkVAm.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.NmqlCm6L.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.MHXR5KL8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.qB-HVE8Q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.TqvEAIXa.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.LatLfBGw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.A6GNbPRI.js">
 	</head>
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_1wmjhgd = {
+					__sveltekit_pr6ovm = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.EOTdDfBr.js"),
-						import("./_app/immutable/entry/app.igD_tB37.js")
+						import("./_app/immutable/entry/start.9w81IbX7.js"),
+						import("./_app/immutable/entry/app.sel3mSnU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
