--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		
 		<link href="./_app/immutable/assets/0.nmvReBiz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D6_nZ1zy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DrM-OS7_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f6dR8Yj3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BXIq1LNK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CG7sC2st.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C_7qQmwv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Byy8-p0P.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bv8dtsBR.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DecfExBJ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.mKEgX5dR.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C8T2TsgD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BjTTtuR0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.URwID2zo.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_15mrrkg = {
+					__sveltekit_19w4cze = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -35,8 +35,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D6_nZ1zy.js"),
-						import("./_app/immutable/entry/app.C_7qQmwv.js")
+						import("./_app/immutable/entry/start.f6dR8Yj3.js"),
+						import("./_app/immutable/entry/app.Byy8-p0P.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
